--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
+<!-- Do I have to edit the code every time I update the github repository?? -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
