--- a/wip.html
+++ b/wip.html
@@ -40,7 +40,7 @@
     <!-- Hero section -->
     <div class="about__main">
         <div class="main__img--container">
-                <img src="images/uh.png" alt="pic" id="about__img">
+                <img src="Images/uh.png" alt="pic" id="about__img">
 
         </div>
         <div class="about__main__container">
@@ -68,7 +68,7 @@
             </div>
             <button class="main__btn"><a href="/">Get Started</a></button>
             <div class="main__img--container">
-                <img src="images/bord.png" alt="pic" id="about__img__btm">
+                <img src="Images/bord.png" alt="pic" id="about__img__btm">
             </div>
         </div>
     </div> -->
