--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     <!-- Hero section -->
     <div class="about__main">
         <div class="main__img--container">
-                <img src="images/about.png" alt="pic" id="about__img">
+                <img src="Images/about.png" alt="pic" id="about__img">
 
         </div>
         <div class="about__main__container">
@@ -95,7 +95,7 @@
             </div>
             <button class="main__btn"><a href="/">Get Started</a></button>
             <div class="main__img--container">
-                <img src="images/bord.png" alt="pic" id="about__img__btm">
+                <img src="Images/bord.png" alt="pic" id="about__img__btm">
             </div>
         </div>
     </div> -->
