--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="main">
         <div class="main__container">
             <div class="main__img--container">
-                <img src="images/mainhero.png" alt="pic" id="main__img">
+                <img src="Images/mainhero.png" alt="pic" id="main__img">
 
             </div>
             <div class="main__content">
