--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2>INTRODUCE.</h2>
                 <h2>IMMERSE.</h2>
                 <h2>INSPIRE.</h2>
-                <p>UMN's most open-minded tech club is finally here.</p>
+                <p> Where innovation meets individuality, and curiosity drives exploration.</p>
                 <button class="main__btn"><a  href="/about.html" >About Us</a></button>
             </div>
             
