--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="/wip.html" class="navbar__links">Board</a>
                 </li>
                 <li class="navbar__btn"> <!-- comment shortcut is ctrl + / -->
-                    <a href="/wip.html" class="button">Join Us!</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform?usp=sf_link" class="button">Join Us!</a>
                 </li> 
                 <!-- whoahhhh fancy pants rich mcgee over here -->
             </ul>        
@@ -99,7 +99,7 @@
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
                     <h2>Taking Action</h2>
-                    <a href="/wip.html">Join Us!</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform?usp=sf_link">Join Us!</a>
                     <a href="https://www.gofundme.com/f/fuel-stem-dreams-at-university-of-minnesota?attribution_id=sl:69dced98-ca98-4c04-bd8f-1c035812f56b&utm_campaign=man_sharesheet_ft&utm_medium=customer&utm_source=copy_link">Donate</a>
                 </div>
                 <div class="footer__link--items">
