--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEXT Website</title>
+    <title>Tech Horizons UMN</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +49,7 @@
                 <h2>IMMERSE.</h2>
                 <h2>INSPIRE.</h2>
                 <p> Where innovation meets individuality, and curiosity drives exploration.</p>
-                <button class="main__btn"><a  href="/about.html" >About Us</a></button>
+                <button class="main__btn"><a  href="https://docs.google.com/forms/d/e/1FAIpQLSecwIlok95zTZOOB7J2imU2uIixSZ-J1ooxOnerLR4OmM8phw/viewform?usp=sf_link" >Kickoff RSVP!</a></button>
             </div>
             
 
@@ -68,12 +68,12 @@
             <div class="services__card">
                 <h2>Our Impact</h2>
                 <p>Discover what we do.</p>
-                <a href="/wip.html"><button class="services__card__button">Impact</button></a>
+                <a href="https://www.instagram.com/tech.horizons.umn/"><button class="services__card__button">Instagram</button></a>
             </div>
             <div class="services__card">
-                <h2>Support Us!</h2>
-                <p>How you can help.</p>
-                <a href="https://www.gofundme.com/f/fuel-stem-dreams-at-university-of-minnesota?attribution_id=sl:69dced98-ca98-4c04-bd8f-1c035812f56b&utm_campaign=man_sharesheet_ft&utm_medium=customer&utm_source=copy_link"><button class="services__card__button">Donate</button></a>
+                <h2>Interested?</h2>
+                <p>Join our newsletter!</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform?usp=sf_link"><button class="services__card__button">Join Us!</button></a>
             </div>
             
         </div>
