--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2>IMMERSE.</h2>
                 <h2>INSPIRE.</h2>
                 <p> Where innovation meets individuality, and curiosity drives exploration.</p>
-                <button class="main__btn"><a  href="https://docs.google.com/forms/d/e/1FAIpQLSecwIlok95zTZOOB7J2imU2uIixSZ-J1ooxOnerLR4OmM8phw/viewform?usp=sf_link" >Kickoff RSVP!</a></button>
+                <button class="main__btn"><a  href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform" >Join Us!</a></button>
             </div>
             
 
