--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="/wip.html" class="navbar__links">Board</a>
                 </li>
                 <li class="navbar__btn"> <!-- comment shortcut is ctrl + / -->
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform?usp=sf_link" class="button">Join Us!</a>
+                    <a href="https://gopherlink.umn.edu/4797/club_signup" class="button">Join Us!</a>
                 </li> 
                 <!-- whoahhhh fancy pants rich mcgee over here -->
             </ul>        
@@ -49,7 +49,7 @@
                 <h2>IMMERSE.</h2>
                 <h2>INSPIRE.</h2>
                 <p> Where innovation meets individuality, and curiosity drives exploration.</p>
-                <button class="main__btn"><a  href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform" >Join Us!</a></button>
+                <button class="main__btn"><a  href="https://gopherlink.umn.edu/4797/club_signup" >Join Us!</a></button>
             </div>
             
 
@@ -72,8 +72,8 @@
             </div>
             <div class="services__card">
                 <h2>Interested?</h2>
-                <p>Join our newsletter!</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform?usp=sf_link"><button class="services__card__button">Join Us!</button></a>
+                <p>Get club updates here!</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform?usp=sf_link"><button class="services__card__button">Newsletter</button></a>
             </div>
             
         </div>
@@ -99,8 +99,8 @@
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
                     <h2>Taking Action</h2>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform?usp=sf_link">Join Us!</a>
-                    <a href="https://www.gofundme.com/f/fuel-stem-dreams-at-university-of-minnesota?attribution_id=sl:69dced98-ca98-4c04-bd8f-1c035812f56b&utm_campaign=man_sharesheet_ft&utm_medium=customer&utm_source=copy_link">Donate</a>
+                    <a href="https://gopherlink.umn.edu/4797/club_signup">Join Us!</a>
+                    <a href="/wip.html">Donate</a>
                 </div>
                 <div class="footer__link--items">
                     <h2>Social Media</h2>
