--- a/wip.html
+++ b/wip.html
@@ -13,7 +13,7 @@
     <!-- Navbar section -->
     <nav class="navbar">
         <div class="navbar__container">
-            <h1 href="/index.html" id="navbar__logo">Tech Horizons</h1>
+            <h1 href="/" id="navbar__logo">Tech Horizons</h1>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -30,28 +30,33 @@
                     <a href="/wip.html" class="navbar__links">Board</a>
                 </li>
                 <li class="navbar__btn"> <!-- comment shortcut is ctrl + / -->
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform?usp=sf_link" class="button">Join Us!</a>
+                    <a href="https://gopherlink.umn.edu/4797/club_signup" class="button">Join Us!</a>
                 </li> 
                 <!-- whoahhhh fancy pants rich mcgee over here -->
             </ul>        
         </div>
     </nav>
 
+
     <!-- Hero section -->
     <div class="about__main">
+        <div class="about__main__container" id="padding">
+        </div>
         <div class="main__img--container">
-                <img src="Images/uh.png" alt="pic" id="about__img">
+                <img src="Images/construction.png" alt="pic" id="about__img">
 
+        </div>
+        <div class="about__main__container" id="padding">
         </div>
         <div class="about__main__container">
             
             <div class="about__main__content">
-                <h1>WIP!</h1>
-                <p>...Seems like you're a bit early to the party!</p>
+                <h1>WIP</h1>
+                <p>Look at you, early bird!</p>
                 <p>Us folk at Tech Horizons are working hard on our website pages, but like all things done with lots of love, they take a little bit more time.</p>
-                <p>We're sorry for the inconvenience. Please check back later!</p>
+                <p>We're sorry for the inconvenience. Please come check back later!</p>
             </div>
-
+            <button class="main__btn"><a  href="/index.html" >Home</a></button>
         </div>
     </div>
 
@@ -93,8 +98,8 @@
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
                     <h2>Taking Action</h2>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSftob2wlL9kUEkDQDtRQRP-wrKn6p7RSKZalmdDpfs1bDXjDQ/viewform?usp=sf_link">Join Us!</a>
-                    <a href="https://www.gofundme.com/f/fuel-stem-dreams-at-university-of-minnesota?attribution_id=sl:69dced98-ca98-4c04-bd8f-1c035812f56b&utm_campaign=man_sharesheet_ft&utm_medium=customer&utm_source=copy_link">Donate</a>
+                    <a href="https://gopherlink.umn.edu/4797/club_signup">Join Us!</a>
+                    <a href="/wip.html">Donate</a>
                 </div>
                 <div class="footer__link--items">
                     <h2>Social Media</h2>
