rsvp button change

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2>IMMERSE.</h2>
                 <h2>INSPIRE.</h2>
                 <p> Where innovation meets individuality, and curiosity drives exploration.</p>
-                <button class="main__btn"><a  href="https://gopherlink.umn.edu/4797/club_signup" >Join Us!</a></button>
+                <button class="main__btn"><a  href="https://docs.google.com/forms/d/e/1FAIpQLSc8Dn0LcqJ5Un8A-HScQOpIVVH5-jdLNxsLqIrJrnYbyBdFiw/viewform?usp=header" >Kickoff RSVP!</a></button>
             </div>
             
 
