created seperate mobile css stylesheet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Horizons UMN</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mobile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
@@ -49,7 +50,7 @@
                 <h2>IMMERSE.</h2>
                 <h2>INSPIRE.</h2>
                 <p> Where innovation meets individuality, and curiosity drives exploration.</p>
-                <button class="main__btn"><a  href="https://docs.google.com/forms/d/e/1FAIpQLSc8Dn0LcqJ5Un8A-HScQOpIVVH5-jdLNxsLqIrJrnYbyBdFiw/viewform?usp=header" >Kickoff RSVP!</a></button>
+                <button class="main__btn"><a  href="https://gopherlink.umn.edu/web_app?id=24040&menu_id=56483&if=0&" >Join Us!</a></button>
             </div>
             
 
