--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                     <a href="/about.html" class="navbar__links">About</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/wip.html" class="navbar__links">Board</a>
+                    <a href="/board.html" class="navbar__links">Board</a>
                 </li>
                 <li class="navbar__btn"> <!-- comment shortcut is ctrl + / -->
                     <a href="https://gopherlink.umn.edu/4797/club_signup" class="button">Join Us!</a>
@@ -110,7 +110,7 @@
                     <a href="/index.html">Home</a>
                     <a href="/about.html">Our Vision</a>
                     <a href="/wip.html">Our Impact</a>
-                    <a href="/wip.html">Our Board</a>
+                    <a href="/board.html">Our Board</a>
                     <a href="https://docs.google.com/document/d/1ktlO9JUpYbmbOmVliT2n_7GoN2nphVt_iqT9iD_7p3g/edit?usp=sharing">Club Constitution</a>
                 </div>
                 <div class="footer__link--items">
