--- a/wip.html
+++ b/wip.html
@@ -27,7 +27,7 @@
                     <a href="/about.html" class="navbar__links">About</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/wip.html" class="navbar__links">Board</a>
+                    <a href="/board.html" class="navbar__links">Board</a>
                 </li>
                 <li class="navbar__btn"> <!-- comment shortcut is ctrl + / -->
                     <a href="https://gopherlink.umn.edu/4797/club_signup" class="button">Join Us!</a>
