--- a/wip.html
+++ b/wip.html
@@ -87,7 +87,7 @@
                     <a href="/index.html">Home</a>
                     <a href="/about.html">Our Vision</a>
                     <a href="/wip.html">Our Impact</a>
-                    <a href="/wip.html">Our Board</a>
+                    <a href="/board.html">Our Board</a>
                     <a href="https://docs.google.com/document/d/1ktlO9JUpYbmbOmVliT2n_7GoN2nphVt_iqT9iD_7p3g/edit?usp=sharing">Club Constitution</a>
                 </div>
                 <div class="footer__link--items">
