--- a/board.html
+++ b/board.html
@@ -38,40 +38,50 @@
     </nav>
 
   <!-- ADDING BOARD MEMBERS HERE -->
-   <div class="board_members">
-        <div class="board__header"> 
-            <h1>MEET OUR BOARD</h1>
-            <p> Our Five Awesome Board Members </p>
+    <!-- Hero section - Matching about page style -->
+    <div class="about__main">
+        <div class="main__img--container">
+            <img src="Images/about.png" alt="Board Members" id="about__img">
         </div>
+        <div class="about__main__container">
+            <div class="about__main__content">
+                <h1>OUR BOARD</h1>
+                <p>!!</p>
+                <p>.. </p>
+            </div>
+        </div>
+    </div>
 
-       <div class="board_container">
-         <!-- President -->
-         <div class="board__member">
-           <!-- This is where i'll add the members images - something like img src=.. -->
-           <div class="member__image">
-             <div class="member__initials">S</div>
-           </div>
-           <div class="member__info">
-             <h3>Sapna</h3>
-             <p class="member__role">President</p>
-             <p class="member__bio"> President. </p>
-           </div>
-         </div>
-         
-         <!-- Vice President -->
-         <div class="board__member">
-           <!-- This is where i'll add the members images - something like img src=.. -->
-           <div class="member__image">
-             <div class="member__initials">C</div>
-           </div>
-           <div class="member__info">
-             <h3>Colin</h3>
-             <p class="member__role">Vice President</p>
-             <p class="member__bio"> Vice President </p>
-           </div>
-         </div>
-       </div> <!-- Close board_container -->
+    <!-- Board Members Section using services styling -->
+    <div class="services">
+        <div class="services__container">
+            <!-- President -->
+            <div class="services__card">
+                <div class="board__member">
+                    <div class="member__image">
+                        <div class="member__initials">S</div>
+                    </div>
+                    <h2>Sapna</h2>
+                    <p class="member__role">President</p>
+                    <p>Desc</p>
+                </div>
+            </div>
 
+            <!-- Vice President -->
+            <div class="services__card">
+                <div class="board__member">
+                    <div class="member__image">
+                        <div class="member__initials">C</div>
+                    </div>
+                    <h2>Colin</h2>
+                    <p class="member__role">Vice President</p>
+                    <p>Desc</p>
+                </div>
+            </div>
+
+            <!-- Add more board members as needed -->
+        </div>
+    </div>
 
 
   
@@ -126,4 +136,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
