--- a/board.html
+++ b/board.html
@@ -46,8 +46,8 @@
         <div class="about__main__container">
             <div class="about__main__content">
                 <h1>OUR BOARD</h1>
-                <p>!!</p>
-                <p>.. </p>
+                <p>Our 5 Awesome Board Members</p>
+                <p></p>
             </div>
         </div>
     </div>
@@ -63,7 +63,7 @@
                     </div>
                     <h2>Sapna</h2>
                     <p class="member__role">President</p>
-                    <p>Desc</p>
+                    <p class="member__desc">Desc</p>
                 </div>
             </div>
 
@@ -75,14 +75,34 @@
                     </div>
                     <h2>Colin</h2>
                     <p class="member__role">Vice President</p>
-                    <p>Desc</p>
+                    <p class="member__desc">Desc</p>
                 </div>
             </div>
-
-            <!-- Add more board members as needed -->
+            <!-- Treasurer -->
+            <div class="services__card">
+                <div class="board__member">
+                    <div class="member__image">
+                        <div class="member__initials">T</div>
+                    </div>
+                    <h2>Yuki</h2>
+                    <p class="member__role">Treasurer</p>
+                    <p class="member__desc">Desc</p>
+                </div>
+            </div>
+    
+            <!-- Web Dev -->
+            <div class="services__card">
+                <div class="board__member">
+                    <div class="member__image">
+                        <div class="member__initials">W</div>
+                    </div>
+                    <h2>Ricki</h2>
+                    <p class="member__role">Web Developer</p>
+                    <p class="member__desc">Desc</p>
+                </div>
+            </div>
         </div>
     </div>
-
 
   
 
@@ -136,5 +156,6 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
