--- a/board.html
+++ b/board.html
@@ -46,63 +46,56 @@
         <div class="about__main__container">
             <div class="about__main__content">
                 <h1>OUR BOARD</h1>
-                <p>Our 5 Awesome Board Members</p>
+                <p>Our 6 Awesome Board Members</p>
                 <p></p>
             </div>
         </div>
     </div>
 
-    <!-- Board Members Section using services styling -->
-    <div class="services">
-        <div class="services__container">
-            <!-- President -->
-            <div class="services__card">
-                <div class="board__member">
-                    <div class="member__image">
-                        <div class="member__initials">S</div>
-                    </div>
-                    <h2>Sapna</h2>
-                    <p class="member__role">President</p>
-                    <p class="member__desc">Desc</p>
-                </div>
+<!-- Board Members Section -->
+<div class="services">
+    <div class="services__container">
+        <!-- President -->
+        <div class="services__card">
+            <div class="member__image">
+                <div class="member__initials">S</div>
             </div>
+            <h2>Sapna</h2>
+            <p class="member__role">President</p>
+            <p class="member__desc">Club leadership and vision</p>
+        </div>
 
-            <!-- Vice President -->
-            <div class="services__card">
-                <div class="board__member">
-                    <div class="member__image">
-                        <div class="member__initials">C</div>
-                    </div>
-                    <h2>Colin</h2>
-                    <p class="member__role">Vice President</p>
-                    <p class="member__desc">Desc</p>
-                </div>
+        <!-- Vice President -->
+        <div class="services__card">
+            <div class="member__image">
+                <div class="member__initials">C</div>
             </div>
-            <!-- Treasurer -->
-            <div class="services__card">
-                <div class="board__member">
-                    <div class="member__image">
-                        <div class="member__initials">T</div>
-                    </div>
-                    <h2>Yuki</h2>
-                    <p class="member__role">Treasurer</p>
-                    <p class="member__desc">Desc</p>
-                </div>
+            <h2>Colin</h2>
+            <p class="member__role">Vice President</p>
+            <p class="member__desc">Event coordination and outreach</p>
+        </div>
+
+        <!-- Treasurer -->
+        <div class="services__card">
+            <div class="member__image">
+                <div class="member__initials">T</div>
             </div>
-    
-            <!-- Web Dev -->
-            <div class="services__card">
-                <div class="board__member">
-                    <div class="member__image">
-                        <div class="member__initials">W</div>
-                    </div>
-                    <h2>Ricki</h2>
-                    <p class="member__role">Web Developer</p>
-                    <p class="member__desc">Desc</p>
-                </div>
+            <h2>Yuki</h2>
+            <p class="member__role">Treasurer</p>
+            <p class="member__desc">Budget management and finances</p>
+        </div>
+
+        <!-- Web Dev -->
+        <div class="services__card">
+            <div class="member__image">
+                <div class="member__initials">W</div>
             </div>
+            <h2>Ricki</h2>
+            <p class="member__role">Web Developer</p>
+            <p class="member__desc">Website development and maintenance</p>
         </div>
     </div>
+</div>
 
   
 
@@ -156,6 +149,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
