--- a/board.html
+++ b/board.html
@@ -53,10 +53,11 @@
     </div>
 
 <!-- Board Members Section -->
+<!-- Board Members Section -->
 <div class="services">
     <div class="services__container">
         <!-- President -->
-        <div class="services__card">
+        <div class="board__card">
             <div class="member__image">
                 <div class="member__initials">S</div>
             </div>
@@ -66,7 +67,7 @@
         </div>
 
         <!-- Vice President -->
-        <div class="services__card">
+        <div class="board__card">
             <div class="member__image">
                 <div class="member__initials">C</div>
             </div>
@@ -76,7 +77,7 @@
         </div>
 
         <!-- Treasurer -->
-        <div class="services__card">
+        <div class="board__card">
             <div class="member__image">
                 <div class="member__initials">T</div>
             </div>
@@ -86,7 +87,7 @@
         </div>
 
         <!-- Web Dev -->
-        <div class="services__card">
+        <div class="board__card">
             <div class="member__image">
                 <div class="member__initials">W</div>
             </div>
@@ -96,7 +97,6 @@
         </div>
     </div>
 </div>
-
   
 
     <!-- Footer Section -->
@@ -149,6 +149,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
