--- a/board.html
+++ b/board.html
@@ -46,13 +46,11 @@
         <div class="about__main__container">
             <div class="about__main__content">
                 <h1>OUR BOARD</h1>
-                <p>Our 6 Awesome Board Members</p>
-                <p></p>
+                <p>Our 7 Awesome Board Members</p>
             </div>
         </div>
     </div>
 
-<!-- Board Members Section -->
 <!-- Board Members Section -->
 <div class="services">
     <div class="services__container">
@@ -95,6 +93,7 @@
             <p class="member__role">Web Developer</p>
             <p class="member__desc">Website development and maintenance</p>
         </div>
+    <!-- add 3 more members -->
     </div>
 </div>
   
@@ -149,6 +148,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
