--- a/board.html
+++ b/board.html
@@ -53,7 +53,7 @@
 
 <!-- Board Members Section -->
 <div class="services">
-    <div class="services__container">
+    <div class="services board__services">
         <!-- President -->
         <div class="board__card">
             <div class="member__image">
@@ -148,6 +148,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
