--- a/board.html
+++ b/board.html
@@ -52,7 +52,7 @@
     </div>
 
 <!-- Board Members Section -->
-<div class="services">
+<div class="services board__services">
     <div class="services board__services">
         <!-- President -->
         <div class="board__card">
@@ -148,6 +148,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
