--- a/board.html
+++ b/board.html
@@ -146,7 +146,7 @@
                     <h2>Taking Action</h2>
                     <a href="https://gopherlink.umn.edu/4797/club_signup">Join Us!</a>
                     <a href="/wip.html">Donate</a>
-                    <a href="">Submit Suggestions</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScv2Rg8FLSA4SIHYGoxkG_jQ4uIiWnj4_tDTd3Ak18kwD2zFg/viewform?usp=sharing&ouid=113345739660777780443">Submit Suggestions</a>
                 </div>
                 <div class="footer__link--items">
                     <h2>Social Media</h2>
@@ -175,4 +175,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
