--- a/board.html
+++ b/board.html
@@ -113,7 +113,7 @@
       </div>
 
       <!-- Event Coordinator -->
-      <div class="board__card" style="--card-bg:#0076BH; --card-fg:#FFFFFF; --accent:#B2DFDB;">
+      <div class="board__card" style="--card-bg:#0076B4; --card-fg:#FFFFFF; --accent:#B2DFDB;">
         <div class="member__image"><div class="member__initials">A</div></div>
         <h2>Angad</h2>
         <p class="member__role">Event Coordinator</p>
@@ -122,7 +122,7 @@
       </div>
 
         <!-- SUNNY -->
-      <div class="board__card" style="--card-bg:#97C6DA; --card-fg:#01579B; --accent:#0288D1;">
+      <div class="board__card" style="--card-bg:#F4A76C; --card-fg:#01579B; --accent:#AA6220;">
         <div class="member__image"><img src="Images/Sunny.PNG" class="member__photo"></div>
         <h2>Sunny</h2>
         <p class="member__role">Club Mascot</p>
@@ -182,6 +182,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
