--- a/board.html
+++ b/board.html
@@ -65,7 +65,7 @@
   
       <!-- Vice President -->
       <div class="board__card" style="--card-bg:#344883; --card-fg:#FFFFFF; --accent:#BBDEFB;">
-        <div class="member__image"><div class="member__initials">C</div></div>
+        <div class="member__image"><img src="Images/ColinAbe.png" class="member__photo"></div>
         <h2>Colin</h2>
         <p class="member__role">Vice President</p>
         <p class="member__desc">Computer Science</p>
