--- a/board.html
+++ b/board.html
@@ -56,7 +56,7 @@
     <div class="services__container">
       <!-- President -->
       <div class="board__card" style="--card-bg:#DD98AA; --card-fg:#1A1A1A; --accent:#B54862;">
-        <div class="member__image"><img src="Images/SapnaSenthil" class="member__photo"></div>
+        <div class="member__image"><img src="Images/SapnaSenthil.png" class="member__photo"></div>
         <h2>Sapna</h2>
         <p class="member__role">President</p>
         <p class="member__desc">Data Science, Math Minor</p>
@@ -104,7 +104,7 @@
 
       <!-- Graphic Designer -->
       <div class="board__card" style="--card-bg:#97C6DA; --card-fg:#01579B; --accent:#0288D1;">
-        <div class="member__image"><img src="Images/NhiMai" class="member__photo"></div>
+        <div class="member__image"><img src="Images/NhiMai.png" class="member__photo"></div>
         <h2>Nhi</h2>
         <p class="member__role">Graphic Designer</p>
         <p class="member__desc">Graphic Design</p>
@@ -182,6 +182,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
