--- a/board.html
+++ b/board.html
@@ -75,7 +75,7 @@
   
       <!-- Treasurer -->
       <div class="board__card" style="--card-bg:#F8A29E; --card-fg:#2E2E2E; --accent:#E65100;">
-        <div class="member__image"><div class="member__initials">Y</div></div>
+        <div class="member__image"><img src="Images/YukiZheng.png" class="member__photo"></div>
         <h2>Yuki</h2>
         <p class="member__role">Treasurer</p>
         <p class="member__desc">Computer Science, Management Finance Minor</p>
@@ -94,7 +94,7 @@
     
       <!-- Aditi -->
       <div class="board__card" style="--card-bg:#B98AAC; --card-fg:#FFFFFF; --accent:#E1BEE7;">
-        <div class="member__image"><div class="member__initials">A</div></div>
+        <div class="member__image"><img src="Images/AditiEdpuganti.png" class="member__photo"></div>
         <h2>Aditi</h2>
         <p class="member__role">Social Media Manager</p>
         <p class="member__desc">Management Information Systems</p>
@@ -114,7 +114,7 @@
 
       <!-- Event Coordinator -->
       <div class="board__card" style="--card-bg:#0076B4; --card-fg:#FFFFFF; --accent:#B2DFDB;">
-        <div class="member__image"><div class="member__initials">A</div></div>
+        <div class="member__image"><img src="Images/AngadVirdi.png" class="member__photo"></div>
         <h2>Angad</h2>
         <p class="member__role">Event Coordinator</p>
         <p class="member__desc">Mechanical Engineering, Finance Minor</p>
@@ -182,6 +182,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
